# Bestiary-Registry

./: .env.example  .gitignore  README.md  compose.yaml  models.py  output.txt  pyproject.toml  reproduce_issues.py  requirements.txt  workflow_error.txt
.github/workflows/: ci.yml
ai-service/: main.py  verify_image_gen.ps1  verify_local.py
app/: app.py
backend/: check_types.py  pyproject.toml  requirements.txt  seed_classes.py  test_import.py  test_report.txt  update_classes.py  verify_metadata.py
backend/alembic/: env.py
backend/alembic/versions/: 034b146bc51b_add_tags.py  215b50182062_add_user.py  6c914bb744c4_add_image_fields.py  e32a3a0cab52_init.py
backend/app/: app.py  auth.py  db.py  demo.py  models.py  seed.py  worker.py
backend/app/clients/: ai_client.py
backend/app/routers/: auth.py  classes.py  creatures.py  tags.py
backend/app/services/: classes.py  creatures.py
backend/tests/: conftest.py  test_ai_integration.py  test_creature_classes.py  test_creatures.py  test_tags.py
docs/: EX3-notes.md
docs/runbooks/: compose.md
frontend/: api_client.py  api_utils.py  dashboard.py  realm_map.py  settings.py  sidebar.py  style.css
frontend/tests/: test_dashboard.py  test_workflow.py
scripts/: demo.sh  refresh.py  verify_async_image.ps1
tests/: test_creatures.py
