[project]
name = "ex1-fastapi-foundations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.18.3",
    "arq>=0.27.0",
    "fastapi>=0.121.2",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "httpx>=0.28.1",
    "imagekitio>=4.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.5.0",
    "psycopg[binary]>=3.3.2",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=5.3.1",
    "requests>=2.32.5",
    "ruff>=0.14.8",
    "schemathesis>=4.9.5",
    "sqlmodel>=0.0.27",
    "streamlit>=1.52.2",
    "streamlit-keyup>=0.3.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--ignore=test_report.txt"


[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]
